syntax = "proto3";

option go_package = "github.com/beanzhou/tandemo/proto/v1;webpb";

// The greeting service definition.
service InviteService {
    // Sends a greeting
    rpc InviteList (InviteRequest) returns (InviteResponse) {}
}

message InviteRequest {
    string user_id = 1;
    int32 page = 2;
    int32 size = 3;
}

message InviteResponse {
    int32 page = 1;
    int32 size = 2;
    repeated User data = 3;
}

message User{
    string id = 1;
    string name = 2;
}


